--- a/WindowsFormsApplication3/App.config
+++ b/WindowsFormsApplication3/App.config
@@ -3,11 +3,7 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="shop.Properties.Settings.shop" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=|DataDirectory|\db.mdb"
-            providerName="System.Data.OleDb" />
-        <add name="shop.Properties.Settings.sqlConnectionString" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=|DataDirectory|\sql.mdf;Integrated Security=True;Connect Timeout=30"
-            providerName="System.Data.SqlClient" />
-        <add name="shop.Properties.Settings.sqlConnectionString1" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename=&quot;C:\Users\admin\Documents\SQL Server Management Studio\sql.mdf&quot;;Integrated Security=True;Connect Timeout=30"
+        <add name="shop.Properties.Settings.sqlConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\sql.mdf;Integrated Security=True;Connect Timeout=30"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
